Implemented the base.html and applied to several pages including goals, ass user and supervisor homepage.  Made some changes to urls.py to make it work properly.

--- a/templates/home_Supervisor.html
+++ b/templates/home_Supervisor.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -183,3 +185,5 @@ button {
 
 </body>
 </html>
+
+{% endblock %}
