--- a/templates/add_goal.html
+++ b/templates/add_goal.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -111,5 +114,5 @@
     </div>
   </body>
 </html>
-
+{% endblock %}
 
