--- a/templates/home_instructor.html
+++ b/templates/home_instructor.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,3 +83,4 @@
     </body>
 </body>
 </html>
+{% endblock %}
